# MSU-Launcher

./: .editorconfig  .gitignore  Cargo.toml  Dioxus.toml  README.md  build.rs  package-lock.json
.github/workflows/: build.yml  cb.yml  ci.yml  release.yml
assets/: main.css
assets/assets/: main.css
assets/assets/style/: main.css
hashes/: gog.txt  steam.txt  steamless.txt
scripts/!mods_preload/: msu-launcher-not-extracted.nut
squirrel/: mod_msu_launcher.nut  mod_resource_loader.nut
src/: button.rs  config.rs  log.rs  main.rs  patcher_laa.rs  patcher_preload.rs  sq.rs  steamless.rs  update.rs
src/sq/: save_game.rs  serialized_sq_value.rs  shared.rs  sq_value.rs
