[package]
name = "msu-launcher"
version = "0.3.0-rc.1"
authors = ["Enduriel <endur1el@protonmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
bundle = []

[dependencies]

dioxus = { version = "0.5", features = ["desktop", "router"] }
tracing = "0.1.40"
dioxus-logger = "0.5.0"
serde = { version = "1.0.203", features = ["derive"] }
anyhow = "1.0.86"
steamlocate = "=2.0.0-beta.2"
toml = "0.8.14"
zip = {version = "2.1.3", default-features = false, features = ["deflate"]}
tokio = "1.38.0"
windows = {version = "0.57.0", features = ["Win32_System_SystemInformation", "Win32_System_Diagnostics", "Win32_System_Diagnostics_Debug", "Win32_System_SystemServices"]}
hex = "0.4.3"
sha2 = "0.10.8"
reqwest = "0.12.4"
image = {version = "0.25.1", default-features = false, features = ["png"]}
manganis = "0.2.2"
bytes = "1.6.0"
