[package]
name = "msu-launcher"
version = "0.4.5"
authors = ["Enduriel <endur1el@protonmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "MSULauncher"
path="src/main.rs"

[features]
bundle = []

[dependencies]

dioxus = { version = "0.5", features = ["desktop", "router"] }
tracing = "0.1.40"
dioxus-logger = "0.5.0"
serde = { version = "1.0.203", features = ["derive"] }
anyhow = "1.0.86"
steamlocate = "=2.0.0-beta.2"
toml = "0.8.14"
zip = {version = "2.1.3", default-features = false, features = ["deflate"]}
tokio = "1.38.0"
windows = {version = "0.57.0", features = ["Win32_System_SystemInformation", "Win32_System_Diagnostics", "Win32_System_Diagnostics_Debug", "Win32_System_SystemServices"]}
sha2 = "0.10.8"
reqwest = { version = "0.12.4", features = ["json"] }
bytes = "1.6.0"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tracing-appender = "0.2.3"
once_cell = "1.19.0"
semver = "1.0.23"
serde_json = "1.0.120"
open = "5.2.0"
chrono = { version = "0.4.38", features = ["serde"] }
byteorder = "1.5.0"
ordered-float = "4.2.1"
const-hex = "1.12.0"

[build-dependencies]
anyhow = "1.0.86"
image = { version = "0.25.1", default-features = false, features = ["png", "ico"] }
winresource = "0.1.17"
dagrs = {git = "https://github.com/dagrs-dev/dagrs", rev= "2fd45f3ba761f16bb8b285d9ea5657170e9576f0"}
thiserror = "1.0.61"
ron = "0.8.1"
generic-array = "1.0.0"
serde = { version = "1.0.203", features = ["derive"] }
sha2 = "0.10.8"
hex = "0.4.3"
